metadata-classic/objects/ExternalCall__c.object
<CustomObject>
    <description>Custom object to store api calls from external systems to kick off processes in Tack.  Records are generally temporary.</description>
    <fields>
        <fullName>CreatedDateTime_del__c</fullName>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SMSOutboundMessage__c</fullName>
        <defaultValue>&quot;Thank you for contacting Thumbtack. Reply to this message to start a text message with a support specialist. Terms apply: http://thumb.tk/smstac&quot;</defaultValue>
        <description>This holds the verbage for the outbound SMS message that is sent for IVR to Text. By changing the default value of this field, the message can be changed on-the-fly.</description>
        <label>SMS Outbound Message</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSSentDateTime__c</fullName>
        <description>The date/time at which the outbound SMS was sent.</description>
        <label>SMS Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToPhone__c</fullName>
        <description>The phone number to which an outbound SMS message will be sent</description>
        <inlineHelpText>The phone number to which an outbound SMS message will be sent</inlineHelpText>
        <label>To Phone</label>
        <type>Phone</type>
    </fields>
    <label>External Call</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ToPhone__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>SMSSentDateTime__c</columns>
        <columns>CreatedDateTime_del__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Calls Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Calls</pluralLabel>
    <recordTypes>
        <fullName>IVRtoSMS</fullName>
        <active>true</active>
        <description>Requests coming from the telephony system for SMS deflection. Triggers process in SFDC to send the initial text.</description>
        <label>IVR to SMS</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>